--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Monex</string>
-    <string name="appwidget_text">Monex</string>
+    <string name="app_name">TeoTask</string>
+    <string name="appwidget_text">TeoTask</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">Get easy access to Monex conversion</string>
